# lrgp-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: tic-tac-toe.md  wire-format.md  writing-an-app.md
examples/: envelope_sizes.py  ttt_cli.py  ttt_local.py
src/lrgp/: __init__.py  _msgpack.py  app_base.py  constants.py  dedup.py  envelope.py  errors.py  router.py  session.py  store.py  transport.py
src/lrgp/apps/: __init__.py  tictactoe.py
tests/: test_dedup.py  test_envelope.py  test_router.py  test_session.py  test_store.py  test_tictactoe.py  test_wire_budget.py
